welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: not found: value avanc
  avanc()
  ^FlowerPot:19: error: value to5 is not a member of Int
  for (i <- 1 to5){
              ^