welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers(){
  avanc()
  gauche()
  faireFleur(Color.RED)
  droite()
  avance();avance();avance();avance()
  faireFleur(Color.CYAN)
  gauche()
  avance();avance();droite()
  recule();recule()
  faireFleur(Color.ORANGE)
  recule();recule()
  gauche();avance();avance();droite()
  faireFleur(Color.PINK)
  droite()
  avance();avance();avance();avance();gauche()
  faireFleur(Color.GREEN)
  droite()
  for (i <- 1 to5){
    recule()
  }
}

def faireFleur(c:Color){
  setCouleurBrosse(Color.YELLOW)
  baisseBrosse();leveBrosse()
  setCouleurBrosse(c)
  for( i <- 1 to 4){
    avance();baisseBrosse();leveBrosse()
    recule()
    gauche()
  }
}